--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ariya</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
 <body>
    
-    <img src="profile.jpg"alt style="width: 20%; height: auto;">
+    <img src="Profile.jpg"alt style="width: 20%; height: auto;">
     <ul>
     <br>Ariyaporn Iemtim
     <br>
