--- a/contact.html
+++ b/contact.html
@@ -2,5 +2,5 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Document</title>
     </head> <body>
-    <ol> <li>Tel: 555-5555</li> <li>Email: ariyaporniem@cpall.ac.th</li> </ol>
+    <ol> <li>Tel: 095-479-2xxx</li> <li>Email: ariyaporniem@cpall.ac.th</li> </ol>
     </body> </html>
