--- a/index.html
+++ b/index.html
@@ -7,26 +7,34 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body>
-   
-    <img src="Profile.jpg"alt style="width: 20%; height: auto;">
-    <ul>
-    <br>Ariyaporn Iemtim
-    <br>
-    <a href = "http://facebook.com"> ไปยังเว็บไซต์ของหน่วยงาน </a>
-    <br>
-    <a href = "C:\Users\ariyaporniem.7ELEVEN\OneDrive - CPALLGROUP\Desktop\Fullstack Development 2024\HTML Personal site\contact.html"> ไปยังเว็บไซต์ของหน่วยงาน </a>
+<center>
+<body style = "background-color: rgb(236, 228, 236);">
+    <img src="profileja.jpg"alt style="width: 12%; height: auto;"class="circle"> 
+    <img src="japann.gif"alt style="width: 40%; height: 20%;">
+    <img src="Profile.jpg"alt style="width: 10%; height: auto;"class="circle"
 
-    <h3>ประสบการณ์ทำงาน</h3>
-<ul>
-    <li>2024 - Present Tesla Company</li>
-    <li>2022 - 2024 AWN Lab</li>
-    <li>2018 - 2022 Dark Lab</li>
-    <li>2010 - 2018 Hospital</li>
+    ><h1 style = "color:rgb(82, 56, 160) ;" >Ariyaporn  Iemtim (Au) </h1>
+</center>
+    <br>
+<center><i>
+    <h3 style= "color: blueviolet; " > สวัสดี เราชื่ออุ๊ เป็นนักเทคนิคการแพทย์ ทำงานที่ CP ALL และชอบไปเที่ยวญี่ปุ่น</h3>
+</center></i>
+<center>
+    <a href = "https://www.cpall.co.th/"> CP ALL PUBLIC COMPANY LIMITED. </a>
+    <br>
 </ul>
 <br>
+    <a href = "C:\Users\ariyaporniem.7ELEVEN\OneDrive - CPALLGROUP\Desktop\Fullstack Development 2024\HTML Personal site\contact.html"> Contact </a>
+<br>
+<br>
+<hr >
+<p>
 
-<table>
+<h3>ประสบการณ์ทำงาน</h3>
+</center>
+</p>
+<br>
+<table align="center">
     <thead>
         <tr>
         <th> Year
@@ -34,21 +42,22 @@
             Work Place </th>
         </tr> </thead>
     <tr>
-      <td>2024 - Present</td>
-      <td>Tesla Company</td>
+      <td>2023 - Present</td>
+      <td>CP ALL</td>
  </tr>
   <tr>
-      <td>2022 - 2024</td>
-      <td>AWN Lab</td>
+      <td>2021 - 2023</td>
+      <td>All Wellness</td>
 </tr>
  <tr>
-     <td>2018 - 2022</td> 
-     <td>Dark Lab</td>
+     <td>2018 - 2021</td> 
+     <td>Gray Company</td>
      </tr>
  <tr>
-    <td>2010 - 2018</td>
-    <td>Hospital</td>
+    <td>2004 - 2018</td>
+    <td>Private Hospital</td>
 </table>
-
+<br>
+<hr>
 </body>
 </html>
